# SciArticle

./: .gitignore  README.md  pyproject.toml
docs/: api_reference.md  architecture.md  installation.md  tz_ot_sciarticle_produkt_scisource_v2.docx
docs/EN_docs/: api_reference.md  architecture.md  installation.md
docs/RU_docs/: README.ru.md  README_ru.md  api_reference_ru.md  architecture.ru.md  architecture_ru.md  installation.ru.md
infra/: .env.example  Dockerfile  docker-compose.yml
src/: celery_app.py
src/api/: permissions.py  serializers.py  urls.py  views.py
src/bot/: __init__.py  admin.py  apps.py  bot.py  models.py  scisource_client.py  services.py  signals.py  tasks.py  utils.py
src/bot/handlers/: callback_handlers.py  handlers.py
src/bot/migrations/: 0006_request_message_search_id.py  0007_remove_pdfupload_chat_message_id_and_more.py  0008_alter_pdfupload_file_id.py  0009_pdfupload_state.py  0010_alter_pdfupload_state.py  0011_alter_pdfupload_state.py  0012_alter_notification_chat_message_id.py  0013_alter_notification_delete_at.py  0014_alter_notification_created_at.py  0015_notification_chat_id.py  0016_chatuser_is_bot.py  0017_alter_config_options_count.py  0018_remove_subscription_reason.py  0019_remove_chatuser_is_in_bot.py  0020_remove_count_subscriptions_for_validation_pdf_conut_and_more.py  0021_remove_count_subscriptions_for_upload_pdf_count_and_more.py  0022_remove_chatuser_upload_count_and_more.py  0023_alter_subscription_start_date.py  0024_alter_chatuser_is_bot_alter_chatuser_join_date_and_more.py  (+6 more)
src/sciarticle/: settings.py
