[project]
name = "sciarticle"
version = "0.1.0"
description = ""
authors = [
    { name = "I. Tkachenko", email = "i.tkachenko@zohomail.eu" },
    { name = "DmitryBurmagin", email = "dmitryodinov@ya.ru" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-telegram-bot (>=22.0,<23.0)",
    "docker (>=7.1.0,<8.0.0)",
    "Django (>4.3)",
    "dotenv (>=0.9.9,<0.10.0)",
    "poetry-core (>=2.0.0,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = ["poetry.core.masonry.API"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.2"
pytest-django = "^4.11.1"
pytest-asyncio = "^0.26.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sciarticle.settings"